# Heislabb_2

./: .gitignore  .gitmodules  Cargo.toml  README.md  run.sh
src/: main.go  main.rs
src/Module/Elevator/: elevator.rs
src/Module/Netowork_nod/src/: TCP.rs  UDP.rs  UDP2.rs  networkMod.rs
src/modules/: common.rs  mod.rs
src/modules/Netowork_nod/: Cargo.toml
src/modules/Network_nod/: Cargo.toml  UDP.rs  UDP2.rs  lib.rs
src/modules/common/: common.rs  mod.rs
src/modules/decision/: Cargo.toml  decision.rs  mod.rs
src/modules/elevator/: Cargo.toml  elevator.rs  mod.rs
src/modules/network/: mod.rs  network.rs
