workspace = { members = ["src/modules/Netowork_nod", "src/modules/elevator"] }
[package]
name = "ex2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network-rust = { git = "https://github.com/TTK4145/network-rust", tag = "v0.3.0" }
driver-rust = { git = "https://github.com/TTK4145/driver-rust", tag = "v0.1.0" }
crossbeam-channel = "0.5"