#workspace = { members = ["src/modules/Network_nod", "src/modules/elevator", "./src/modules/decision"] }
[package]
name = "ex2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network-rust = { git = "https://github.com/TTK4145/network-rust", tag = "v0.3.0" }
driver-rust = { git = "https://github.com/TTK4145/driver-rust", tag = "v0.1.0" }

elevator = {path = "./src/modules/elevator"}
Network_nod = { path = "./src/modules/Network_nod" }
decision = {path = "./src/modules/decision"}

crossbeam-channel = "0.5"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }