[package]
name = "Heislabb_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network-rust = { git = "https://github.com/TTK4145/network-rust", tag = "v0.3.0" }
driver-rust = { git = "https://github.com/TTK4145/driver-rust", tag = "v0.1.0" }

crossbeam-channel = "0.5"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
local-ip-address = "0.3"
if-addrs = "0.6"
md5 = "0.7"
lazy_static = "1.4"
