[package]
name = "elevator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
driver-rust = { git = "https://github.com/TTK4145/driver-rust", tag = "v0.1.0" }
network-rust = { git = "https://github.com/TTK4145/network-rust", tag = "v0.3.0" }
crossbeam-channel = "0.5"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }

[lib]
path = "elevator.rs"